tests/passing/automatic_exclamation_mark_insertion.db
print("Hello world") // This is fine