tests/failing/automatic_bracket_insertion.db
print("Hello world" // This is also fine